--- a/style.css
+++ b/style.css
@@ -1,4 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 body {
   background-color: rgb(30, 30, 30);
   color: aliceblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  background-image: url('https://source.unsplash.com/1600x900/?landscape');
+  font-size: 105%;
+}
+
+.card {
+  background: #000000d0;
+  color: aliceblue;
+  padding: 1em;
+  border-radius: 30px;
+  width: 100%;
+  max-width: 420px;
+  margin: 1em;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  margin: 0.5em;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  height: 44px;
+  width: 46px;
+  background: #7c7c7c2b;
+  color: aliceblue
+}
+
+button:hover {
+  background: #7c7c7c6b;
+  cursor: pointer;
+  transition: 0.1s ease-in-out;
+}
+
+input {
+  border: none;
+  outline: none;
+  padding: 0.4em 1em;
+  border-radius: 23px;
+  background-color: #7c7c7c2b;
+  color: white;
+  font-family: inherit;
+  font-size: 120%;
+  width: calc(100% - 80px);
+}
+
+h1.temp {
+  margin: 0;
 }
