--- a/style.css
+++ b/style.css
@@ -60,8 +60,15 @@ input {
 
 h1.temp {
   margin: 0;
+  margin-bottom: 0.5em;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
 }
 
 .description {
   text-transform: capitalize;
+  margin-left:8px;
 }
